# hetic-hackathon-ray-tracing

./: .gitignore  CMakeLists.txt  README.md  main.cpp  operations.cpp  operations.h  todo.md  vectoroperations.h
include/: Plane.h  Ray.h  Scene.h  Sphere.h  Vector3.h
src/: Camera.cpp  Camera.h  Color.cpp  Color.h  Image.cpp  Image.h  Light.cpp  Light.h  Lighting.cpp  Lighting.h  Object.h  Plane.cpp  Plane.h  PlanetTextures.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  Vector3.cpp  Vector3.h  main.cpp
